--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--   <link rel = "stylesheet" type="text/css" href="./style.css"> -->
-  <link rel=”stylesheet” href=”https://TAISHI0209.github.io/ict/style.css”/>
+  <link rel = "stylesheet" type="text/css" href="./style.css">
+<!--   <link rel=”stylesheet” href=”https://TAISHI0209.github.io/ict/style.css”/> -->
 
 
   <title>paypay銀行</title>
@@ -18,33 +18,33 @@
 
     <div id="box">
       <div id="branch">
-       <img src="./img/branch.jpg" alt="支店名">
+       <img src="branch.jpg" alt="支店名">
       </div>
         <div id="price">
-         <img src="./img/price_only.jpg" alt="残高">
+         <img src="price_only.jpg" alt="残高">
           <div id="hide">
-            <img src="./img/hide.jpg" alt="非表示">
+            <img src="hide.jpg" alt="非表示">
           </div>
         </div>
        <div id="menu">
-          <img src="./img/menu.jpg" alt="振込">
+          <img src="menu.jpg" alt="振込">
         </div>
     </div>
   </header>
 
   <div id="content">
     <div id="choice">
-      <img src="./img/choice.jpg" alt="バナー">
+      <img src="choice.jpg" alt="バナー">
     </div>
     <div id="price">
-      <img src="./img/price.jpg" alt="プライス">
+      <img src="price.jpg" alt="プライス">
     </div>
     <div id="look_more">
-      <img src="./img/look_more.jpg" alt="もっと見る">
+      <img src="look_more.jpg" alt="もっと見る">
     </div>
   </div>
 <footer>
-  <img src="./img/footer.jpg" alt="フッター">
+  <img src="footer.jpg" alt="フッター">
 
 </footer>
 
